# BMSight

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
bmspc/: evaluate.py  features.py  parser.py  tag.py  test_parser.py  test_tag.py  viz.py
src/: corpus.py  evaluate.py  features.py  parser.py  segment.py  tag.py  tagger.py  test_parser.py  test_tag.py  viz.py
